Ajout de style : centrer le contenu de la div #tableau

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -23,7 +23,7 @@
             <div id="titre"></div>
 
             <div id="list_versions">
-                <div id="tableau"></div>
+                <div id="tableau" style="width: 50%; margin: 0 auto;"></div>
             </div>
         </div>
 
